@startuml

title __CONFIG's Class Diagram__\n

  namespace transport {
    namespace config {
      class transport.config.GameServerInitializer {
          # initChannel()
      }
    }
  }
  

  namespace transport {
    namespace config {
      class transport.config.HttpRequestHandler {
          - wsURI : String
          + HttpRequestHandler()
          + exceptionCaught()
          # channelRead0()
          - inputStreamToString()
      }
    }
  }
  

  namespace transport {
    namespace config {
      class transport.config.TextWebSocketFrameHandler {
          + userEventTriggered()
          # channelRead0()
      }
    }
  }
  

  transport.config.GameServerInitializer -up-|> io.netty.channel.ChannelInitializer
  transport.config.HttpRequestHandler -up-|> io.netty.channel.SimpleChannelInboundHandler
  transport.config.TextWebSocketFrameHandler -up-|> io.netty.channel.SimpleChannelInboundHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
